@@ -1,3 +1,11 @@
+/**
+ * \file status.h
+ *
+ * \brief definition of the C enum for a file scan status
+ *
+ * uhuru_file_status defines the status of a file during or after scan
+ */
+
 #ifndef _LIBUHURU_COMMON_STATUS_H_
 #define _LIBUHURU_COMMON_STATUS_H_
 
@@ -8,14 +16,14 @@ extern "C" {
 #endif
 
 enum uhuru_file_status {
-  UHURU_UNDECIDED = 1,
-  UHURU_CLEAN,
-  UHURU_UNKNOWN_FILE_TYPE,
-  UHURU_EINVAL,
-  UHURU_IERROR,
-  UHURU_SUSPICIOUS,
-  UHURU_WHITE_LISTED,
-  UHURU_MALWARE,
+  UHURU_UNDECIDED = 1,         /*!< not yet decided by scan                                */
+  UHURU_CLEAN,                 /*!< file is clean and does not contain a malware           */
+  UHURU_UNKNOWN_FILE_TYPE,     /*!< file type is not handled by any module                 */
+  UHURU_EINVAL,                /*!< an invalid value was passed to scan functions          */
+  UHURU_IERROR,                /*!< an internal error occured during file scan             */
+  UHURU_SUSPICIOUS,            /*!< file is suspicious: not malware but not clean also     */
+  UHURU_WHITE_LISTED,          /*!< file is while listed, i.e. guaranteed clean            */
+  UHURU_MALWARE,               /*!< file contains a malware                                */
 };
 
 #ifdef __cplusplus
